# VirtualVista

./: .gitignore  .gitmodules  CMakeLists.txt  Notes.txt  README.md  build.sh  compile.sh  install_deps.sh
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindSOIL.cmake
include/: AppManager.h  Application.h  Camera.h  Entity.h  Input.h  Light.h  Mesh.h  Model.h  Renderer.h  ResourceManager.h  Settings.h  Shader.h  ShaderManager.h  Texture.h  Transform.h
include/vv/: AppManager.h  Application.h  Camera.h  Entity.h  GLFWState.h  Input.h  InputManager.h  Light.h  Mesh.h  Model.h  RenderContex.h  RenderableObject.h  Renderer.h  Resource.h  ResourceManager.h  Scene.h  Settings.h  Shader.h  Texture.h  Time.h  Transform.h  VirtualVista.h
src/: AppManager.cpp  Application.cpp  Application.h  Camera.cpp  Camera.h  Entity.cpp  GLFWState.cpp  Input.cpp  Input.h  InputManager.cpp  Light.cpp  Mesh.cpp  Mesh.h  Model.cpp  Poly.cpp  Poly.h  PolyFactory.cpp  PolyFactory.h  PolyManager.cpp  PolyManager.h  RenderContex.cpp  RenderableObject.cpp  Renderer.cpp  Renderer.h  Resource.cpp  ResourceManager.cpp  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Shader.cpp  Shader.h  ShaderManager.cpp  SimpleMeshObject.cpp  SimpleMeshObject.h  Texture.cpp  Time.cpp  Transform.cpp  Utilities.cpp  Utilities.h  (+1 more)
src/old/: Application.cpp  Application.h  PolyManager.cpp  Renderer.cpp  Renderer.h  Utilities.cpp  Utilities.h
src/shaders/: fragment.glsl  fragment2.glsl  light_cube.frag  light_cube.vert  lighting.frag  lighting.vert  nanosuit.frag  nanosuit.vert  shader.frag  shader.vert  vertex.glsl
